--- a/Assets/unity-http/Tests/PlayMode/Duck.Http.Tests.PlayMode.asmdef
+++ b/Assets/unity-http/Tests/PlayMode/Duck.Http.Tests.PlayMode.asmdef
@@ -1,12 +1,22 @@
 {
     "name": "Duck.Http.Tests.PlayMode",
+    "rootNamespace": "",
     "references": [
-        "Duck.Http"
-    ],
-    "optionalUnityReferences": [
-        "TestAssemblies"
+        "UnityEngine.TestRunner",
+        "UnityEditor.TestRunner",
+        "UnityHttp"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
-    "allowUnsafeCode": false
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "nunit.framework.dll"
+    ],
+    "autoReferenced": false,
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
