rename assembly definitions

--- a/Assets/unity-http/Tests/EditMode/UnityHttp.Tests.EditMode.asmdef
+++ b/Assets/unity-http/Tests/EditMode/UnityHttp.Tests.EditMode.asmdef
@@ -1,12 +1,14 @@
 {
-    "name": "Duck.Http.Tests.PlayMode",
+    "name": "UnityHttp.EditMode.Tests",
     "rootNamespace": "",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "UnityHttp"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
