add root namespace to assembly definitions

--- a/Assets/unity-http/Tests/EditMode/UnityHttp.Tests.EditMode.asmdef
+++ b/Assets/unity-http/Tests/EditMode/UnityHttp.Tests.EditMode.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "UnityHttp.EditMode.Tests",
-    "rootNamespace": "",
+    "rootNamespace": "UnityHttp.Tests.EditMode",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
