--- a/Assets/unity-http/Tests/PlayMode/UnityHttp.Tests.PlayMode.asmdef
+++ b/Assets/unity-http/Tests/PlayMode/UnityHttp.Tests.PlayMode.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "UnityHttp.Tests.PlayMode",
-    "rootNamespace": "",
+    "rootNamespace": "UnityHttp.Tests.PlayMode",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
